--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ baseurl: ''
 permalink: pretty
 title: 'Apex Arcana'
 email: 'webmaster@arcana.com.au'
-description: 'Data science and AI with an emphasis on integration, scale and human centred design. Jesse Bugden has lead research, development and implementation on a wide range of projects such as; content processing, data analysis, natural language processing, full-text search and index, graph and the application of computer insights to augment human decision making. Leverage 23 years of experience and a group of highly skilled associates to solve your hardest problems.'
+description: 'Data and IT solutions for integration, scale and better human experiences. Leverage 25 years of experience to understand and solve your hardest problems.'
 
 # url: "http://arcana.com.au" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -16,11 +16,11 @@ footer:
   copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
 
 seo:
-  meta_og_title: "Apex Arcana"
+  meta_og_title: "Apex Arcana - IT Consulting"
   meta_og_type: "website"
   meta_og_url: "https://arcana.com.au"
-  meta_og_image: "https://arcana.com.au/images/mastery.png"
-  meta_og_description: "Data science and AI with an emphasis on integration, scale and human centred design. Jesse Bugden has lead research, development and implementation on a wide range of projects such as; content processing, data analysis, natural language processing, full-text search and index, graph and the application of computer insights to augment human decision making. Leverage 23 years of experience and a group of highly skilled associates to solve your hardest problems."
+  meta_og_image: "https://arcana.com.au/images/social.png"
+  meta_og_description: "Data and IT solutions for integration, scale and better human experiences. Leverage 25 years of experience to understand and solve your hardest problems."
   google_analytics_id: "G-DML1QM0XS9"
 
 logo:
