--- a/docs/_data/menus.yml
+++ b/docs/_data/menus.yml
@@ -16,3 +16,6 @@ footer:
   - name: "Contact"
     url: "/contact/"
     weight: 2
+  - name: "Privacy Policy"
+    url: "/privacy_policy/"
+    weight: 3
