--- a/docs/_data/contact.yml
+++ b/docs/_data/contact.yml
@@ -1,4 +1,4 @@
 # email: 'jesse@arcana.com.au'
 email_obfuscated: 'a4cec1d7d7c1e4c5d6c7c5cac58ac7cbc98ac5d1'
-linkedin: 'https://www.linkedin.com/in/jessebugden/'
+linkedin: 'https://www.linkedin.com/company/apex-arcana/'
 contact_button_link: 'contact'
